--- a/google-ai-hackathon-app/app/globals.css
+++ b/google-ai-hackathon-app/app/globals.css
@@ -7,3 +7,16 @@
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
 }
+
+.spin {
+    animation: spin 1.0s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
