--- a/google-ai-hackathon-app/app/globals.css
+++ b/google-ai-hackathon-app/app/globals.css
@@ -11,6 +11,7 @@ input::file-selector-button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: 900;
     padding: 10px;
 }
 
