--- a/google-ai-hackathon-app/app/globals.css
+++ b/google-ai-hackathon-app/app/globals.css
@@ -4,12 +4,14 @@
 
 :root{
     --green-standard: #ABDEC9;
+    --green-dark: #2B4038;
 }
 
 input::file-selector-button {
     background-color: var(--green-standard);
     border: none;
     border-radius: 5px;
+    color: var(--green-dark);
     cursor: pointer;
     font-weight: 900;
     padding: 10px;
