--- a/google-ai-hackathon-app/app/globals.css
+++ b/google-ai-hackathon-app/app/globals.css
@@ -36,3 +36,17 @@ input::file-selector-button {
         transform: rotate(360deg);
     }
 }
+
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
